@@ -258,9 +258,9 @@ scoobtrack_read_tempo(fts_midifile_t *file, int tempo)
   scomark_t *scomark = data->last_marker;
   int beat_type;
   
-  if(data->last_marker == NULL || data->last_marker_time > time)
+  if(data->last_marker == NULL || time > data->last_marker_time)
   {
-    scomark = scoobtrack_append_scomark_event(track, time, seqsym_tempo);
+    scomark = scoobtrack_append_scomark_event(data->merge, time, seqsym_tempo);
 
     if(data->last_marker != NULL)
       scomark_set_beat_type(scomark, scomark_get_beat_type(data->last_marker));
@@ -272,6 +272,8 @@ scoobtrack_read_tempo(fts_midifile_t *file, int tempo)
     beat_type = 4;
   
   scomark_set_tempo(scomark, 0.25 * (double)beat_type * 60.0 / ((double)tempo * 0.000001));
+  
+  data->last_marker = scomark;
 }
 
 static void
@@ -283,7 +285,7 @@ scoobtrack_read_time_signature(fts_midifile_t *file, int numerator, int denomina
   scomark_t *scomark = data->last_marker;
   
   if(data->last_marker == NULL || data->last_marker_time > time)
-    scomark = scoobtrack_append_scomark_event(track, time, seqsym_bar);
+    scomark = scoobtrack_append_scomark_event(data->merge, time, seqsym_bar);
   else
     scomark_set_type(scomark, seqsym_bar);
   
